name:                website
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jbddc/jbddc.github.io
license:             BSD3
license-file:        LICENSE
author:              Author name João Costa
maintainer:          a70430@alunos.uminho.pt
copyright:           2017 Author name João Costa
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable website
  main-is:             site.hs
  default-extensions:          OverloadedStrings
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.9.*,
                       pandoc == 1.19.*,
                       filepath
